--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
             padding: 0;
             box-sizing: border-box;
         }
-
+        body {
+            font-family: 'Montserrat', sans-serif; background-color: rgb(37, 37, 37); color: rgb(255, 255, 255);
+        }
+        th, td { border: 1px solid #61e6db; padding: 8px; }
         table {
             border-collapse: collapse;
             width: 100%;
