--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             box-sizing: border-box;
         }
         body {
-            font-family: 'Montserrat', sans-serif; background-color: rgb(37, 37, 37); color: rgb(255, 255, 255);
+            font-family: 'Montserrat', sans-serif; background-color: rgb(37, 37, 37); color: white;
         }
         th, td { border: 1px solid #61e6db; padding: 8px; }
         table {
