--- a/index.html
+++ b/index.html
@@ -11,25 +11,29 @@
             padding: 0;
             box-sizing: border-box;
         }
+
         body {
-            font-family: 'Montserrat', sans-serif; background-color: rgb(37, 37, 37); color: white;
+            font-family: 'Montserrat', sans-serif;
+            background-color: rgb(37, 37, 37);
+            color: white;
         }
-        th, td { border: 1px solid #61e6db; padding: 8px; }
+
+
+
+        th,
+        td {
+            border: 1px solid #61e6db;
+            padding: 8px;
+
+        }
+
         table {
             border-collapse: collapse;
             width: 100%;
         }
 
-        th {
-            font-family: Arial, Helvetica, sans-serif;
-            text-align: center;
-        }
 
-        table td {
-            border: 1px solid black;
-            padding: 5px;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
+
 
         .acao {
             width: 10%;
@@ -87,7 +91,7 @@
         }
 
         .mac {
-            width: 25   0px;
+            width: 25 0px;
         }
 
         .add button {
