--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         body {
             font-family: 'Montserrat', sans-serif;
             background-color: rgb(37, 37, 37);
-            color: green;
+            color: white;
         }
 
 
